--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,28 @@ android {
   }
 }
 
+repositories {
+  mavenLocal{
+    content {
+      excludeGroup "com.facebook.react"
+    }
+  }
+  mavenCentral{
+    content {
+      excludeGroup "com.facebook.react"
+    }
+  }
+  maven {
+    // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+    url "$rootDir/../node_modules/react-native/android"
+  }
+  maven {
+    // Android JSC is installed from npm
+    url "$rootDir/../node_modules/jsc-android/dist"
+  }
+  google()
+}
+
 dependencies {
   api 'com.appboy:android-sdk-ui:23.2.1'
   api 'com.facebook.react:react-native:+'
