--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,5 +52,5 @@ repositories {
 dependencies {
   api 'com.appboy:android-sdk-ui:23.2.1'
   api 'com.facebook.react:react-native:+'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 }
