--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,6 @@ repositories {
 
 dependencies {
   api 'com.appboy:android-sdk-ui:23.2.1'
-  api 'com.facebook.react:react-native:$versions.react_native'
+  api "com.facebook.react:react-native:$versions.react_native"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 }
